{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "36170515-51c4-4db0-8bbb-6225dd8f7486",
            "actions": [
                {
                    "name": "BasicMovement",
                    "type": "Value",
                    "id": "400a7934-9eb7-46e7-aa3a-213735d13219",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1bb81ed6-9b1d-4ed6-8027-a64b0593a202",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Respawn",
                    "type": "Button",
                    "id": "543ebf60-cb5f-46a4-9af1-fedb603d0902",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "e2b57883-7dae-44fd-ad0c-c111c8720bea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OptionsMenu",
                    "type": "Button",
                    "id": "8a7d0143-4922-43fa-a5e4-644b765d4fff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9b909634-d300-4969-a398-51c5ff498aef",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "a4a52f15-68aa-45a3-82aa-160e98093e36",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cec48a54-0136-4a2d-90d6-2a33cb9eb1f5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "a455c78e-8f83-4957-898a-04cbe3780da4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "b2b9407c-c385-4ebc-be97-c9accbc2f225",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "82fb145e-26dd-403e-8107-10c24ab5910c",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8927f11-0e32-412c-82ce-c220779333fd",
                    "path": "<Keyboard>/enter",
                    "interactions": "MultiTap(tapDelay=0.4)",
                    "processors": "",
                    "groups": "",
                    "action": "Respawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af6f9fc8-85fd-4c77-8077-0131e4512e31",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eba6f351-429b-4c7e-bb34-417cf30dc89c",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "OptionsMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RebindAuxiliarMenu",
            "id": "86a4a4f5-3490-49b9-ad40-7e5f759a5d65",
            "actions": [],
            "bindings": []
        },
        {
            "name": "RecordOnCommand",
            "id": "ec5e619d-1ab2-4d34-93a9-7098759123a9",
            "actions": [
                {
                    "name": "InitiateRecording",
                    "type": "Button",
                    "id": "cc8f009c-8673-477c-a7f9-f8b9920609b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StopRecording",
                    "type": "Button",
                    "id": "f744ceeb-72ec-4ac4-9a17-83482af88422",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac005b60-d93c-41ec-a9fc-a060ccea196c",
                    "path": "<Keyboard>/r",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "InitiateRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e92c39c-1af4-4b2d-8965-2b4895f778b4",
                    "path": "<Keyboard>/p",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "StopRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}